# sentiment_analysis

./: .pre-commit-config.yaml  README.md  docker-compose.migrate.yml  docker-compose.yml  init_db.py  migrate.py  pyproject.toml  requirements.txt  scraper.py  scraping_test.ipynb
db/: base.py  interface.py
db/reviews/: models.py  service.py
dtos/: reviews.py
libs/: pyproject.toml
libs/db/: models.py
migrations/: Dockerfile
migrations/001_initial_review_models/: down.sql  up.sql
models/: __init__.py  author.py  base.py  review.py  reviewauthor.py
scraper/: Dockerfile
utils/: requester.py
